markup for modal finished, dl element on tablet and desktop to be corrected

--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -1,6 +1,6 @@
+$tablet: 768px;
+$desktop: 1280px;
 .modal__backdrop {
-  //   height: 100%;
-  //   width: 100%;
   // position: fixed;
   top: 0;
   right: 0;
@@ -18,12 +18,12 @@
 // }
 .modal {
   width: 280px;
-  // height: 940px;
+  max-height: 95vh;
   background-color: #fff;
   margin: auto;
   position: relative;
   padding: 48 20 40;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .modal__close {
   position: absolute;
@@ -139,4 +139,62 @@
   background-color: #fff;
   color: #000;
   border: 1px solid #000;
+}
+@media screen and (min-width: #{$tablet}) {
+  .modal__backdrop {
+    padding-top: 100px;
+  }
+  .modal {
+    width: 704px;
+    padding: 40px 72px 40px 36px;
+    display: flex;
+    gap: 68px;
+  }
+  .modal__poster-container {
+    width: 264px;
+    height: 374px;
+  }
+  .modal__poster {
+    width: inherit;
+    height: 374px;
+  }
+  .modal__title {
+    margin: 0 0 20;
+  }
+  .modal__buttons-container {
+    gap: 15px;
+  }
+  .modal__button {
+    width: 125px;
+  }
+}
+@media screen and (min-width: #{$desktop}) {
+  .modal__backdrop {
+    padding-top: 150px;
+  }
+  .modal {
+    width: 806px;
+    padding: 40px 12px;
+    gap: 16px;
+  }
+
+  .modal__poster-container {
+    width: 375px;
+    height: 478px;
+  }
+  .modal__poster {
+    height: 100%;
+  }
+  .modal__title {
+    font-size: 30px;
+    line-height: 1.166;
+    margin: 0 0 20;
+  }
+  .modal__buttons-container {
+    gap: 15px;
+    justify-content: flex-start;
+  }
+  .modal__button {
+    width: 136px;
+  }
 }
